--- a/platformio.ini
+++ b/platformio.ini
@@ -15,6 +15,6 @@ platform = espressif8266
 board = nodemcuv2
 build_flags = -Wl,-Teagle.flash.4m.ld
 framework = arduino
-lib_deps = iotsa
+lib_deps = https://github.com/cwi-dis/iotsa.git
 monitor_baud = 115200
-; upload_port = m369clock.local
+; upload_port = jjesp03.local
