Fix iotsa version to 1.8

--- a/platformio.ini
+++ b/platformio.ini
@@ -16,6 +16,6 @@ board = nodemcuv2
 build_flags = -Wl,-Teagle.flash.4m.ld
 framework = arduino
 lib_deps = 
-	iotsa=https://github.com/cwi-dis/iotsa.git#master
+	iotsa@~1.8
 monitor_baud = 115200
 ; upload_port = jjesp03.local
