Adapted for 2.0 API and https

--- a/platformio.ini
+++ b/platformio.ini
@@ -11,11 +11,11 @@
 src_dir = .
 
 [env:nodemcuv2]
-platform = espressif8266@~1.6
+platform = espressif8266
 board = nodemcuv2
-build_flags = -Wl,-Teagle.flash.4m.ld
+build_flags = -Wl,-Teagle.flash.4m.ld -DIOTSA_WITH_HTTPS
 framework = arduino
-lib_deps = 
-	iotsa@~1.8
-monitor_baud = 115200
+lib_deps = https://github.com/cwi-dis/iotsa.git
+; lib_deps = file:///Users/jack/src/dis-git/iotsa
+monitor_speed = 115200
 ; upload_port = jjesp03.local
