Adapted for github actions ci/cd

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,7 +15,7 @@ platform = espressif8266
 board = nodemcuv2
 build_flags = -Wl,-Teagle.flash.4m3m.ld -DIOTSA_WITH_HTTPS
 framework = arduino
-lib_deps = https://github.com/cwi-dis/iotsa.git
+lib_deps = iotsa
 lib_ignore = esp32_https_server_compat
 monitor_speed = 115200
 ; upload_port = jjesp03.local
