--- a/platformio.ini
+++ b/platformio.ini
@@ -9,13 +9,28 @@
 ; http://docs.platformio.org/page/projectconf.html
 [platformio]
 src_dir = .
+;env_default = nodemcuv2
 
-[env:nodemcuv2]
-platform = espressif8266
-board = nodemcuv2
-build_flags = -Wl,-Teagle.flash.4m3m.ld -DIOTSA_WITH_HTTPS
+[common]
 framework = arduino
 lib_deps = iotsa
+build_flags = -DIOTSA_WITH_HTTPS
+
+[esp8266]
+extends = common
+platform = espressif8266
 lib_ignore = esp32_https_server_compat
-monitor_speed = 115200
-; upload_port = jjesp03.local
+build_flags = -Wl,-Teagle.flash.4m3m.ld ${common.build_flags}
+
+[esp32]
+extends = common
+platform = espressif32
+build_flags = ${common.build_flags}
+
+[env:nodemcuv2]
+extends = esp8266
+board = nodemcuv2
+
+[env:esp32thing]
+extends = esp32
+board = esp32thing
