--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,7 @@
 ; http://docs.platformio.org/page/projectconf.html
 [platformio]
 src_dir = .
-;env_default = nodemcuv2
+;env_default = esp32thing
 
 [common]
 framework = arduino
