Updated for lib_compat_mode=strict

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,7 +13,9 @@ src_dir = .
 
 [common]
 framework = arduino
-lib_deps = iotsa
+lib_ldf_mode = deep+
+lib_compat_mode = strict
+lib_deps = https://github.com/cwi-dis/iotsa.git#develop
 build_flags = -DIOTSA_WITH_HTTPS
 
 [esp8266]
