--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,8 @@
 ; http://docs.platformio.org/page/projectconf.html
 [platformio]
 src_dir = .
-;env_default = esp32thing
+default_envs = 
+    esp32c3supermini
 
 [common]
 framework = arduino
@@ -25,15 +26,18 @@ lib_ignore = esp32_https_server_compat
 board_build.ldscript = eagle.flash.4m3m.ld
 build_flags = ${common.build_flags}
 
-[esp32]
+[esp32c3]
 extends = common
 platform = espressif32
-build_flags = ${common.build_flags}
+build_flags = ${common.build_flags} -DESP32C3 -DARDUINO_USB_MODE=1 -DARDUINO_USB_CDC_ON_BOOT=1 -DIOTSA_SERIAL_SPEED=460800
+board_build.mcu = esp32c3
 
 [env:nodemcuv2]
 extends = esp8266
 board = nodemcuv2
 
-[env:esp32thing]
-extends = esp32
-board = esp32thing
+[env:esp32c3supermini]
+extends = esp32c3
+board = esp32-c3-devkitm-1
+board_upload.flash_size = 4MB
+board_build.partitions = min_spiffs.csv
