--- a/platformio.ini
+++ b/platformio.ini
@@ -29,7 +29,7 @@ build_flags = ${common.build_flags}
 [esp32c3]
 extends = common
 platform = espressif32
-build_flags = ${common.build_flags} -DESP32C3 -DARDUINO_USB_MODE=1 -DARDUINO_USB_CDC_ON_BOOT=1 -DIOTSA_SERIAL_SPEED=460800
+build_flags = ${common.build_flags} -DIOTSA_WITH_BLE -DESP32C3 -DARDUINO_USB_MODE=1 -DARDUINO_USB_CDC_ON_BOOT=1 -DIOTSA_SERIAL_SPEED=460800
 board_build.mcu = esp32c3
 
 [env:nodemcuv2]
